add storage link
